# air_gun_timer

./: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.module.scss  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/android-tts/: Cargo.toml  build.rs
src-tauri/plugins/android-tts/android/: build.gradle.kts
src-tauri/plugins/android-tts/android/src/main/java/com/kaileanokeefe/guntimer/tts/: AndroidTtsPlugin.kt
src-tauri/plugins/android-tts/permissions/: default.toml
src-tauri/plugins/android-tts/permissions/autogenerated/: reference.md
src-tauri/plugins/android-tts/permissions/schemas/: schema.json
src-tauri/plugins/android-tts/src/: lib.rs
src-tauri/src/: lib.rs  main.rs  session.rs
src/components/CollapsibleSection/: CollapsibleSection.module.scss  CollapsibleSection.tsx
src/components/OptionEditor/: OptionEditor.module.scss  OptionEditor.tsx
src/components/RunHistory/: RunHistory.module.scss  RunHistory.tsx
src/components/SessionControls/: SessionControls.module.scss  SessionControls.tsx
src/components/TimerDashboard/: TimerDashboard.logic.ts  TimerDashboard.module.scss  TimerDashboard.test.ts  TimerDashboard.tsx
src/components/TimerEditor/: TimerEditor.module.scss  TimerEditor.tsx
src/domain/: editPayloads.ts  timerTypes.ts
src/services/: configStorage.ts  resultAudio.ts  sessionEngine.ts
src/store/: appSlice.ts  hooks.ts  store.ts
src/styles/: global.scss
