[package]
name = "gun_timer"
version = "0.1.0"
description = "Configurable timer and random selector"
authors = ["Kailean O'Keefe"]
edition = "2021"

[lib]
name = "gun_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
